--- a/src/App.sass
+++ b/src/App.sass
@@ -15,6 +15,10 @@
             color: rgba(255,255,255,0.5)
             font-weight: 1000
             text-align: center
+            font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif
+            margin-top: 0.5em
+            margin-bottom: 0.5em
+            line-height: 1em
 
 @keyframes App-logo-spin 
   from
