--- a/src/App.sass
+++ b/src/App.sass
@@ -19,6 +19,9 @@
             margin-top: 0.5em
             margin-bottom: 0.5em
             line-height: 1em
+    .icon
+        color: rgba(255,255,255,0.8)
+
 
 @keyframes App-logo-spin 
   from
