--- a/src/components/big-icon-title.sass
+++ b/src/components/big-icon-title.sass
@@ -1,7 +1,13 @@
 .big-icon-title
     .title-icon
     .title
+        line-height: 3em
+        height: 3em
+        display: inline-block
+        vertical-align: super
+        margin-left: 1em
         span
             font-size: 1.8em
             color: rgba(255,255,255,0.8)
             font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif
+            line-height: 3em
