--- a/src/App.sass
+++ b/src/App.sass
@@ -21,7 +21,7 @@
             line-height: 1em
     .icon
         color: rgba(255,255,255,0.8)
-
+        font-size: 3em
 
 @keyframes App-logo-spin 
   from
