--- a/src/components/line-breaker.sass
+++ b/src/components/line-breaker.sass
@@ -1,4 +1,4 @@
 .line-breaker
-    height: 1px
-    color: rgba(255,255,255,0.5)
-    width: 100%
+    margin-top: 0.5em
+    height: 2px
+    background: rgba(255,255,255,0.2)
