--- a/src/App.sass
+++ b/src/App.sass
@@ -1,4 +1,5 @@
 .page
+    font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif
     width: 100vw
     height: 100vh
     background: linear-gradient(to bottom right, #50a3a2 0%, #2eca7f 100%)
@@ -15,13 +16,20 @@
             color: rgba(255,255,255,0.5)
             font-weight: 1000
             text-align: center
-            font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif
             margin-top: 0.5em
             margin-bottom: 0.5em
             line-height: 1em
-    .icon
-        color: rgba(255,255,255,0.8)
-        font-size: 3em
+    .introduce
+        margin-left: 1em
+        .introduce-content
+            font-size: 1.4em
+            color: rgba(255,255,255,0.8)
+            text-align: center
+            margin-left: 15%
+            margin-right: 15%
+        .icon
+            color: rgba(255,255,255,0.8)
+            font-size: 3em
 
 @keyframes App-logo-spin 
   from
