--- a/src/App.sass
+++ b/src/App.sass
@@ -19,17 +19,17 @@
             margin-top: 0.5em
             margin-bottom: 0.5em
             line-height: 1em
-    .introduce
+    .title
         margin-left: 1em
-        .introduce-content
-            font-size: 1.4em
-            color: rgba(255,255,255,0.8)
-            text-align: center
-            margin-left: 15%
-            margin-right: 15%
         .icon
             color: rgba(255,255,255,0.8)
-            font-size: 3em
+            font-size: 2.5em
+    .introduce-content
+        font-size: 1.4em
+        color: rgba(255,255,255,0.8)
+        text-align: center
+        margin-left: 15%
+        margin-right: 15%
 
 @keyframes App-logo-spin 
   from
