--- a/src/App.sass
+++ b/src/App.sass
@@ -1,35 +1,44 @@
 .page
-    font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif
     width: 100vw
     height: 100vh
-    background: linear-gradient(to bottom right, #50a3a2 0%, #2eca7f 100%)
-    position: absolute
     overflow: hidden
-    .head
-        text-align: center
-        margin-top: 4em
-        z-index: 1
-    .note
-        margin-top: 2em
-        p
-            font-size: 3em
-            color: rgba(255,255,255,0.5)
-            font-weight: 1000
+    position: absolute
+    .page-content
+        width: 100vw
+        height: 100vh
+        position: absolute
+        font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif
+        background: linear-gradient(to bottom right, #50a3a2 0%, #2eca7f 100%)
+        overflow: scroll
+        .head
             text-align: center
-            margin-top: 0.5em
-            margin-bottom: 0.5em
-            line-height: 1em
-    .title
-        margin-left: 1em
-        .icon
+            margin-top: 4em
+            z-index: 1
+        .note
+            margin-top: 2em
+            p
+                font-size: 3em
+                color: rgba(255,255,255,0.5)
+                font-weight: 1000
+                text-align: center
+                margin-top: 0.5em
+                margin-bottom: 0.5em
+                line-height: 1em
+        .title
+            margin-left: 1em
+            .icon
+                color: rgba(255,255,255,0.8)
+                font-size: 2.5em
+            .content
+                margin-top: 2em
+                display: flex
+                justify-content: space-around
+        .introduce-content
+            font-size: 1.4em
             color: rgba(255,255,255,0.8)
-            font-size: 2.5em
-    .introduce-content
-        font-size: 1.4em
-        color: rgba(255,255,255,0.8)
-        text-align: center
-        margin-left: 15%
-        margin-right: 15%
+            text-align: center
+            margin-left: 15%
+            margin-right: 15%
 
 @keyframes App-logo-spin 
   from
