--- a/src/App.sass
+++ b/src/App.sass
@@ -39,6 +39,7 @@
             text-align: center
             margin-left: 15%
             margin-right: 15%
+        .skill-board
 
 @keyframes App-logo-spin 
   from
