--- a/src/App.sass
+++ b/src/App.sass
@@ -40,6 +40,8 @@
             margin-left: 15%
             margin-right: 15%
         .skill-board
+            display: grid
+            grid-template-columns: auto auto auto auto
 
 @keyframes App-logo-spin 
   from
