--- a/src/components/skill-bar.sass
+++ b/src/components/skill-bar.sass
@@ -1,11 +1,14 @@
 .skill-bar
     .label
-        color: rgba(255,255,255,0.8)
-        font-size: 1.6em
+        width: 4em
+        display: inline-block
+        text-align: center
+        .label-img
+            height: 2.5em
     .bar
         background: rgba(255,255,255,0.3)
-        height: 1em
+        height: 2.5em
         width: 20em
         display: inline-block
         .bar-content
-            height: 1em
+            height: 2.5em
