--- a/src/components/board.scss
+++ b/src/components/board.scss
@@ -4,15 +4,18 @@
     background-color: darkcyan;
     height: 45%;
     box-sizing: border-box;
-    grid-template-columns: 1fr 4fr 1fr;
     grid-gap: 10px;
     .left-arrow{
-        grid-column: 1/10;
+        grid-column: 1/2;
+        background-color: aquamarine;
     }
     .content{
-        grid-column: 8/10;
+        grid-column: 2/15;
+        grid-row: 1;
+        background-color: aquamarine;
     }
     .right-arrow{
-        grid-column: 1/10;
+        grid-column: 15/16;
+        background-color: aquamarine
     }
 }
