--- a/src/components/board.scss
+++ b/src/components/board.scss
@@ -1,10 +1,10 @@
 .board{
     display: grid;
     width: 100%;
-    height: 35em;
+    height: 40em;
     box-sizing: border-box;
     grid-gap: 10px;
-    background: center no-repeat url("../assets/lerone-pieters-1395410-unsplash.jpg");
+    background-size: cover;
     .left-arrow{
         grid-column: 1/2;
     }
