--- a/src/components/title-board.scss
+++ b/src/components/title-board.scss
@@ -9,8 +9,6 @@
     .title-board-content{
         text-align: center;
         font-size: 1.5em;
-        p{
-            margin-top: 0.5em;
-        }
+        line-height: 2em;
     }
 }
