--- a/src/components/round-skill-bar.scss
+++ b/src/components/round-skill-bar.scss
@@ -2,7 +2,7 @@
     display: inline-flex;
     .icon{
         border-radius: 50%;
-        border: 2px solid lightblue;
+        overflow: hidden;
     }
     .label{
         margin-left: 2em;
@@ -11,10 +11,13 @@
             font-size: 1.5em;
         }
         .label-bar{
-            height: 0.5em;
-            background: rgba(255,255,255,0.3);
+            height: 0.8em;
+            background: rgba(255,255,255,0.5);
+            border-radius: 0.5em;
+            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
             .bar-content{
-                height:0.5em
+                height:0.8em;
+                border-radius: 0.5em;
             }
         }
     }
