--- a/src/components/round-skill-bar.scss
+++ b/src/components/round-skill-bar.scss
@@ -21,21 +21,14 @@
             .bar-content{
                 height:0.8em;
                 border-radius: 0.5em;
+                //width: 0%;
                 //animation-name: get-fat;
                 //animation-timing-function: linear;
                 //animation-duration: 5s;
                 transition-property: all;
-                transition-duration: 5s linear;
+                transition-duration: 5s;
+                transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
             }
         }
-    }
-}
-
-@keyframes get-fat{
-    0% {
-        width: 0%;
-    }
-    100% {
-        width: auto;
     }
 }
